Atualização dos textos e inclusão de divisória

--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
               </div>
             </div>
 
+            <div class="b-example-divider"></div>
+
             <h2 class="titulo-secundario">Veja como proceder em caso de roubo ou furto</h2>
             <p class="vantagens">Entre em contato com a nossa assistência 24 horas com o protocolo a seguir para ter seu atendimento agilizado.</p>
 
@@ -130,7 +132,7 @@
                       <img class="bi" width="1em" height="1em">
                     </div>
                   <h5>Aplicativo instalado</h5>
-                  <p class="texto-procedimento">Nosso seguro não é apenas para celular. Adicione qualquer dispositivo: celular, notebook, tablet, entre outros.</p>
+                  <p class="texto-procedimento">Ter o nosso aplicativo instalado no aparelho assegurado.</p>
                 </div>
 
                 <div class="px-3 py-10 my-5 text-center">
@@ -139,7 +141,7 @@
                       <img class="bi" width="1em" height="1em">
                     </div>
                   <h5>Boletim de ocorrência</h5>
-                  <p class="texto-procedimento">Nosso seguro não é apenas para celular. Adicione qualquer dispositivo: celular, notebook, tablet, entre outros.</p>
+                  <p class="texto-procedimento">Estar portando o boletim de ocorrência, seja on-line ou impresso.</p>
                 </div>
 
                 <div class="px-3 py-10 my-5 text-center">
@@ -148,7 +150,7 @@
                       <img class="bi" width="1em" height="1em">
                     </div>
                   <h5>Bloqueio do aparelho realizado</h5>
-                  <p class="texto-procedimento">Nosso seguro não é apenas para celular. Adicione qualquer dispositivo: celular, notebook, tablet, entre outros.</p>
+                  <p class="texto-procedimento">O bloqueio do aparelho por IMEI é importante para a sua segurança e para acelerar o seu processo.</p>
                 </div>
               </div>
             </div>
