Adição e estilização das páginas de planos e de contato.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
                           </li>
                           <li class="nav-item">
                           <a class="nav-link" href="planos.html">Planos</a>
-                          <li class="nav-item">
-                          <a class="nav-link" href="quemsomos.html">Quem somos</a>
                           </li>
                           <li class="nav-item">
                           <a class="nav-link" href="contato.html">Contato</a>
@@ -59,8 +57,17 @@
               <p class="vantagens">Sem burocracia, sem taxas adicionais surpresa e assistência 24 horas.</p>
             </section>
 
+            <div class="col-lg-6 mx-auto">
+              <p class="vantagens">Somos a DevSeguros&CO, uma seguradora digital especializada
+                em aparelhos eletrônicos, com sistema de rastreamento integrado
+                ao aplicativo. Trabalhamos com todos os dispositivos, seja celular,
+                tablet, notebook, entre outros. Nossa seguradora é diferenciada e
+                possui uma equipe disponível 24 horas para atendê-los. Nosso objetivo
+                é oferecer para você segurança para andar com o seu dispositivo por
+                onde for.</p>
+            </div>
 
-            <div class="container px-4 py-5" id="featured-3">
+            <div class="container px-4 py-2" id="featured-3">
               <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
 
                 <div class="feature col">
@@ -170,10 +177,11 @@
 
             <div class="b-example-divider"></div>
 
-        </main>
-        
+        </main>  
     </body>
 
     <footer>
-			<p class="copyright">&copy; Copyright - DevSeguros&CO 2022</p>
+		<p class="copyright">&copy; Copyright - DevSeguros&CO 2022</p>
     </footer>
+
+    </html>
