--- a/planos.html
+++ b/planos.html
@@ -13,28 +13,87 @@
 
     <body>
         <header class="header">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="index.html">DevSeguros&CO</a>
-                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html">DevSeguros&CO</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
                   <div class="collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
-                        <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="planos.html">Planos</a>
-                      </li>
-                      
-                        <li class="nav-item">
-                            <a class="nav-link" href="quemsomos.html">Quem somos</a>
-                          </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="contato.html">Contato</a>
+                      <a class="nav-link" href="index.html">Home</a>
+                      </li>
+                      <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="planos.html">Planos</a>
+                      </li>
+                      <li class="nav-item">
+                      <a class="nav-link" href="contato.html">Contato</a>
                       </li>
                     </ul>
                   </div>
-                </div>
-              </nav>
+              </div>
+          </nav>
         </header>
+
+        <h2 class="titulo-planos">Planos</h2>
+            <p class="subtexto-planos">Verifique os nossos planos e entre em contato conosco para efetivar o seu cadastro. Estamos esperando por você.</p>
+            <div class="container py-3">
+            <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+              <div class="col">
+                <div class="card mb-4 rounded-3 shadow-sm">
+                  <div class="card-header py-3">
+                    <h4 class="my-0 fw-normal">Básico</h4>
+                  </div>
+                  <div class="card-body">
+                    <h1 class="card-title pricing-card-title">R$59,99<small class="text-muted fw-light">/mês</small></h1>
+                    <ul id="lista-features" class="list-unstyled mt-3 mb-4">
+                      <li>1 dispositivo</li>
+                      <li>Uma conta no aplicativo rastreador</li>
+                      <li>Assistência 24 horas</li>
+                    </ul>
+                    <a href="contato.html" button type="button" class="w-100 btn btn-lg btn-outline-primary">Entre em contato</button></a>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card mb-4 rounded-3 shadow-sm">
+                  <div class="card-header py-3">
+                    <h4 class="my-0 fw-normal">Pro</h4>
+                  </div>
+                  <div class="card-body">
+                    <h1 class="card-title pricing-card-title">R$89,99<small class="text-muted fw-light">/mês</small></h1>
+                    <ul id="lista-features" class="list-unstyled mt-3 mb-4">
+                      <li>5 dispositivos</li>
+                      <li>Uma conta no aplicativo rastreador</li>
+                      <li>Assistência 24 horas</li>
+                    </ul>
+                    <a href="contato.html" button type="button" class="w-100 btn btn-lg btn-primary">Entre em contato</button></a>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card mb-4 rounded-3 shadow-sm border-primary">
+                  <div class="card-header py-3 text-white bg-primary border-primary">
+                    <h4 class="my-0 fw-normal">Família</h4>
+                  </div>
+                  <div class="card-body">
+                    <h1 class="card-title pricing-card-title">$199,99<small class="text-muted fw-light">/mês</small></h1>
+                    <ul id="lista-features" class="list-unstyled mt-3 mb-4">
+                      <li>10 dispositivos</li>
+                      <li>5 contas no aplicativo rastreador</li>
+                      <li>Assistência 24 horas</li>
+                    </ul>
+                    <a href="contato.html" button type="button" class="w-100 btn btn-lg btn-primary">Entre em contato</button></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </body>
+
+        <footer>
+        <p class="copyright">&copy; Copyright - DevSeguros&CO 2022</p>
+        </footer>
+
+        </html>
